--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -46,8 +46,8 @@ alert('he4');
 THREEGRAPHS.Settings.staticUrl = '../img';
 
 var sampleData = {
-cols: [ { name:"col1", color:"CC0000" },
-{ name:"col2", color:"00CC00" },
+cols: [ { name:"col1", color:"cc00ff" },
+{ name:"col2", color:"#ff6600" },
 { name:"col3", color:"0000CC" }
 ],
 rows: [ { name: "row 1", values: [5,6,12] },
