--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -32,23 +32,18 @@
     <script type="text/javascript">
     </script>
 </head>
-<body style="margin:0; padding:0; background-color:#0332;">
-testing
+<body>
+
 <h1>Text File Reader</h1>
 <div>
     Select a text file:
     <input type="file" id="fileInput">
 </div>
-<pre id="fileDisplayArea"><pre>
-    <script src="text.js"></script>
-<script>
 
-THREEGRAPHS.Settings.staticUrl = '../img';
 
-</script>
-<div id="threegraphs-valuelable">
-    sss
-</div>
+
+<script src="text.js"></script>
+
 
 <!--  -->
 
