--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -36,7 +36,7 @@
 
 <form>
     <input type="radio" name="bartype" onchange="hei();" value="type1" checked> Top Row and Column1 for names<br>
-    <input type="radio" name="bartype" value="type2"> Top Row only<br>
+    <input type="radio" name="bartype" onchange="hei2();"value="type2"> Top Row only<br>
     <input type="radio" name="bartype" value="other"> Use only row and col no
 </form>
 
@@ -48,12 +48,18 @@
 
 <script>
     function hei() {
-        alert('hei');
         var input = 22;
         var i2 = input; // er denne bare tilgjengelig et post og get? document.getElementById("input");
+        window.yourGlobalVariable = 'type1';
+        var i3 = window.yourGlobalVariable;
 
-        //alert (input);
     }
+
+
+    function hei2() {
+         window.yourGlobalVariable = 'type2';
+    }
+
 </script>
 
 <script src="text.js"></script>
