--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -75,6 +75,9 @@ window.yourGlobalVariable = 'type1';
 <script src="text.js"></script>
 <!--  -->
 
+<div id="threegraphs-valuelable">
+    sss
+</div>
 
 
 </body>
