--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -34,12 +34,12 @@
 </head>
 <body bgcolor="#0A122A">
 <font color="#E0E6F8">
-    <div align="right"> <a href="barchart.html"><font size="+2" color="#F3F781">upload new file</a></div>
+    <div align="right"> <a href="barchart.html"><font size="+2" color="#F3F781">New graph</a></div>
 <br><br><font size="+1" color="#E0E6F8">
     <form>
-    <input type="radio" name="bartype" onchange="hei();"  value="type1" checked> Top Row and Column1 for names<br>
-    <input type="radio" name="bartype" onchange="hei2();" value="type2"> Top Row only<br>
-    <input type="radio" name="bartype" onchange="hei3();" value="type3"> Use only row and col no
+    <input type="radio" name="bartype" onchange="hei();"  value="type1" checked> Top Row and Column1 for names (type1)<br>
+    <input type="radio" name="bartype" onchange="hei2();" value="type2"> Top Row only(type2)<br>
+    <input type="radio" name="bartype" onchange="hei3();" value="type3"> Use only row and col no(type3)
 </form>
 <br>
 <div>
