new color and text

--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -31,7 +31,7 @@
     <script type="text/javascript" src="../fonts/helvetiker_bold.typeface.js"></script>
 
 </head>
-<body bgcolor="#0A122A">
+<body bgcolor="##58ACFA">
 <div id="wrapper">
 
 
@@ -39,9 +39,9 @@
     <div align="right"> <a href="barchart.html"><font size="+2" color="#F3F781">New graph</a></div>
    <font size="+1" color="#E0E6F8">
     <form>
-    <input type="radio" name="bartype" onchange="hei();"  value="type1" checked> Top Row and Column1 for names (type1)<br>
-    <input type="radio" name="bartype" onchange="hei2();" value="type2"> Top Row only(type2)<br>
-    <input type="radio" name="bartype" onchange="hei3();" value="type3"> Use only row and col no(type3)
+    <input type="radio" name="bartype" onchange="hei();"  value="type1" checked>Use top row and first column on x and z axis<br>
+    <input type="radio" name="bartype" onchange="hei2();" value="type2">Use top row on z axis<br>
+    <input type="radio" name="bartype" onchange="hei3();" value="type3"> Use rownumber and columnumber on x and z axis
 </form>
     Select a text file:
     <input type="file" id="fileInput">
