--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -39,9 +39,9 @@
     <div align="right"> <a href="barchart.html"><font size="+2" color="#F3F781">New graph</a></div>
    <font size="+1" color="#E0E6F8">
     <form>
-    <input type="radio" name="bartype" onchange="hei();"  value="type1" checked>Use top row and first column on x and z axis<br>
-    <input type="radio" name="bartype" onchange="hei2();" value="type2">Use top row on z axis<br>
-    <input type="radio" name="bartype" onchange="hei3();" value="type3"> Use rownumber and columnumber on x and z axis
+    <input type="radio" name="bartype" onchange="hei();"  value="type1" checked>Use dataset first line and column on two axises<br>
+    <input type="radio" name="bartype" onchange="hei2();" value="type2">Use dataset first line on one axis<br>
+    <input type="radio" name="bartype" onchange="hei3();" value="type3"> Dataset has no header names or column names
 </form>
        <br>
        <form>
