works with different types

--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -39,10 +39,10 @@
     <div align="right"> <a href="barchart.html"><font size="+2" color="#F3F781">New graph</a></div>
    <font size="+1" color="#E0E6F8">
     <form>
-    <input type="radio" name="bartype" onchange="hei();"  value="type1" checked>Use dataset first line and column on two axises<br>
-    <input type="radio" name="bartype" onchange="hei2();" value="type2">Use dataset first line on one axis<br>
-    <input type="radio" name="bartype" onchange="hei3();" value="type3"> Dataset has no header names or column names
-</form>
+     <input type="radio" name="bartype" onchange="hei2();" value="type2" checked>Use first row as header<br>
+     <input type="radio" name="bartype" onchange="hei3();" value="type3"> Dont use first row as header <br>
+
+    </form>
        <br>
        <form>
            <input type="radio" name="bartype" onchange="setCommaSeparated();"  value="comma" checked>Dataset is comma separated<br>
@@ -80,8 +80,8 @@
     function setSemicolonSeparated() {
          window.yourSeparatorVariable = ';';
     }
-window.yourGlobalVariable = 'type1';
-window.yourSeparatorVariable = ';';
+window.yourGlobalVariable = 'type2';
+window.yourSeparatorVariable = ',';
 </script>
 
 <script src="text.js"></script>
