--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -39,8 +39,8 @@
     <div align="right"> <a href="barchart.html"><font size="+2" color="#F3F781">New graph</a></div>
    <font size="+1" color="#E0E6F8">
     <form>
-     <input type="radio" name="bartype" onchange="hei2();" value="type2" checked>Use first row as header<br>
-     <input type="radio" name="bartype" onchange="hei3();" value="type3"> Dont use first row as header <br>
+     <input type="radio" name="bartype" onchange="hei2();" value="type2" checked>Use first row as column names<br>
+     <input type="radio" name="bartype" onchange="hei3();" value="type3"> Dont use first row as column names<br>
 
     </form>
        <br>
