--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -39,9 +39,9 @@
     <div align="right"> <a href="barchart.html"><font size="+2" color="#F3F781">New graph</a></div>
    <font size="+1" color="#E0E6F8">
     <form>
-     <input type="radio" name="bartype" onchange="hei();" value="type2" checked>Use first row and first column on axises<br>
-     <input type="radio" name="bartype" onchange="hei2();" value="type2" checked>Use first row on axis<br>
-     <input type="radio" name="bartype" onchange="hei3();" value="type3"> Use colnr and rowno on axises<br>
+     <input type="radio" name="bartype" onchange="hei();" value="type2" checked>Use first row and first column on axises(type1)<br>
+     <input type="radio" name="bartype" onchange="hei2();" value="type2" checked>Use first row on axis(type2)<br>
+     <input type="radio" name="bartype" onchange="hei3();" value="type3"> Use colnr and rowno on axises(type3)<br>
 
     </form>
        <br>
