--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -36,15 +36,18 @@
 
 
 
-    <div align="left"> <a href="barchart.html"><font size="+2" color="#210B61">New graph</a></div><br>
-   <font size="+1" color="#151515">
+    <div class="left">
+    <a href="barchart.html">New graph</a> <br>
+
+
     Choose graph style:
        <form>
         <input type="radio" name="bartype" onchange="hei3();" value="type3"> Show dataset in 3D<br><a href="ex1.csv">download example file</a><br><br>
         <input type="radio" name="bartype" onchange="hei2();" value="type2" checked> Show dataset in 3D <br>but use 1st row as column names<br><a href="ex2.csv">download example file</a><br><br>
-        <input type="radio" name="bartype" onchange="hei();" value="type2" checked>Show dataset in 3D <br>but use 1st row and 1st column as column and row names</names><br><a href="ex3.csv">download example file</a><br>
+        <input type="radio" name="bartype" onchange="hei();" value="type1" checked>Show dataset in 3D <br>but use 1st row and 1st column as column and row names</names><br><a href="ex3.csv">download example file</a><br>
 
     </form>
+
        <br>
        Choose file format:
        <form>
@@ -54,6 +57,7 @@
 
     Select a text file:
     <input type="file" id="fileInput">
+    </div>
 </div>
 
 
