--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -42,10 +42,9 @@
 
     Choose graph style:
        <form>
-        <input type="radio" name="bartype" onchange="hei3();" value="type3"> Show dataset in 3D<br><a href="ex1.csv">download example file</a><br><br>
-        <input type="radio" name="bartype" onchange="hei2();" value="type2" checked> Show dataset in 3D <br>but use 1st row as column names<br><a href="ex2.csv">download example file</a><br><br>
-        <input type="radio" name="bartype" onchange="hei();" value="type1" checked>Show dataset in 3D <br>but use 1st row and 1st column as column and row names</names><br><a href="ex3.csv">download example file</a><br>
-
+           <input type="radio" name="bartype" onchange="hei();" value="type1" checked>Show dataset in 3D <br>but use 1st row and 1st column as column and row names</names><br>
+           <input type="radio" name="bartype" onchange="hei2();" value="type2" checked> Show dataset in 3D <br>but use 1st row as column names<br>  <br>
+           <input type="radio" name="bartype" onchange="hei3();" value="type3"> Show dataset in 3D<br><br>
     </form>
 
        <br>
