--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -23,7 +23,7 @@
       border: 1px solid #fff;
     }
   </style>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style_advanced.css">
     <script type="text/javascript" src="../lib/three.min.js"></script>
     <script type="text/javascript" src="../lib/TrackballControls.js"></script>
     <script type="text/javascript" src="../lib/TrackballControlsTouch.js"></script>
