--- a/demos/index.html
+++ b/demos/index.html
@@ -36,11 +36,11 @@
 
     <div class="left">
         <br><br><br>
-    Select a text file:<br><br><br>
+
     <input type="file" id="fileInput"> <br><br><br>
 
-        <a href="barchart.html">More settings</a> <br>
-
+        <a href="barchart.html">Advanced</a> <br><br>
+        <a href="example.csv">Download example</a> <br>
     </div>
 </div>
 
