--- a/demos/index.html
+++ b/demos/index.html
@@ -47,8 +47,8 @@
 
 <script>
 
-window.yourSeparatorVariable = 'unknown';
-window.yourGlobalVariable = 'type3';
+window.separator = 'unknown';
+window.axisnotation = 'nameOnZeroAxises';
 </script>
 
 <script src="text.js"></script>
