--- a/demos/index.html
+++ b/demos/index.html
@@ -47,8 +47,8 @@
 
 <script>
 
-window.separator = 'unknown';
-window.axisnotation = 'nameOnZeroAxises';
+window.separatorchar = 'unknown';
+window.datacellvalueonaxis = 'zeroaxis';
 </script>
 
 <script src="text.js"></script>
