1 and 2 axis ok

--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -42,9 +42,9 @@
 
     Choose graph style:
        <form>
-           <input type="radio" name="bartype" onchange="settwoaxis();" value="" checked>Show dataset in 3D <br>but use 1st row and 1st column as column and row names</names><br>
-           <input type="radio" name="bartype" onchange="setoneaxis();" value="" checked> Show dataset in 3D <br>but use 1st row as column names<br>  <br>
-           <input type="radio" name="bartype" onchange="setzeroaxis();" value=""> Show dataset in 3D<br><br>
+           <input type="radio" name="bartype" onchange="settwoaxis();" value="" checked>Label 2 axises</names><br>
+           <input type="radio" name="bartype" onchange="setoneaxis();" value="" checked>Label one axis<br>  <br>
+           <input type="radio" name="bartype" onchange="setzeroaxis();" value=""> No labels on axis<br><br>
     </form>
 
        <br>
