parseint and init must be fixed

--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -42,9 +42,9 @@
 
     Choose graph style:
        <form>
-           <input type="radio" name="bartype" onchange="settwoaxis();" value="" checked>Label 2 axises</names><br>
-           <input type="radio" name="bartype" onchange="setoneaxis();" value="" checked>Label one axis<br>  <br>
-           <input type="radio" name="bartype" onchange="setzeroaxis();" value=""> No labels on axis<br><br>
+           <input type="radio" name="bartype" onchange="settwoaxis();" value="" checked>Data values 2 axises</names><br>
+           <input type="radio" name="bartype" onchange="setoneaxis();" value="" checked>Data values 1 axis<br>  <br>
+           <input type="radio" name="bartype" onchange="setzeroaxis();" value="">No labels on axis<br><br>
     </form>
 
        <br>
