--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -43,7 +43,7 @@
     Choose graph style:
        <form>
            <input type="radio" name="bartype" onchange="settwoaxis();" value="" checked>Data values 2 axises</names><br>
-           <input type="radio" name="bartype" onchange="setoneaxis();" value="" checked>Data values 1 axis<br>  <br>
+           <input type="radio" name="bartype" onchange="setoneaxis();" value="">Data values 1 axis<br>  <br>
            <input type="radio" name="bartype" onchange="setzeroaxis();" value="">No labels on axis<br><br>
     </form>
 
@@ -62,6 +62,7 @@
 
 <script>
     function settwoaxis() {
+
         window.datacellvalueonaxis = 'twoaxis';
     }
 
@@ -81,9 +82,11 @@
          window.separatorchar = ';';
     }
 
-window.datacellvalueonaxis = 'zeroaxis';
 window.separatorchar = ',';
+window.datacellvalueonaxis = 'twoaxis';
+
 </script>
+
 
 <script src="text.js"></script>
 <!--  -->
