--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -44,7 +44,7 @@
        <form>
            <input type="radio" name="bartype" onchange="settwoaxis();" value="" checked>Data values 2 axises</names><br>
            <input type="radio" name="bartype" onchange="setoneaxis();" value="">Data values 1 axis<br>  <br>
-           <input type="radio" name="bartype" onchange="setzeroaxis();" value="">No labels on axis<br><br>
+           <input type="radio" name="bartype" onchange="setzeroaxis();" value="">No data values on axis<br><br>
     </form>
 
        <br>
