css file removed

--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -23,7 +23,7 @@
       border: 1px solid #fff;
     }
   </style>
-    <link rel="stylesheet" type="text/css" href="style_advanced.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <script type="text/javascript" src="../lib/three.min.js"></script>
     <script type="text/javascript" src="../lib/TrackballControls.js"></script>
     <script type="text/javascript" src="../lib/TrackballControlsTouch.js"></script>
@@ -36,7 +36,7 @@
 
 
 
-    <div class="left">
+    <div class="leftadvanced">
     <a href="barchart.html">New graph</a> <br>
 
 
