--- a/demos/index.html
+++ b/demos/index.html
@@ -35,6 +35,7 @@
 <div id="wrapper">
 
     <div class="left">
+        <a href="index.html">New graph</a> <br>
         <br><br><br>
 
     <input type="file" id="fileInput"> <br><br><br>
