--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -46,8 +46,21 @@
            <input type="radio" name="bartype" onchange="setzeroaxis();" value="" checked>No data values on axis<br><br>
            <input type="radio" name="bartype" onchange="setoneaxis();" value="">Data values 1 axis<br>  <br>
            <input type="radio" name="bartype" onchange="settwoaxis();" value="" >Data values 2 axises</names><br>
+           <input type="radio" name="bartype" onchange="settwoaxiscoll();" value="" >Data values 2 axises collapse similar</names><br>
+       </form>
 
-    </form>
+        Number of columns to remove<br>
+        <select id="mySelect" onchange="myFunction()">
+            <option value="1">1
+            <option value="2">2
+            <option value="3">3
+            <option value="4">4
+            <option value="5">5
+            <option value="6">6
+            <option value="7">7
+            <option value="8">8
+            <option value="9">9
+        </select>
 
     Select a text file:
     <input type="file" id="fileInput">
@@ -59,6 +72,11 @@
     function settwoaxis() {
 
         window.datacellvalueonaxis = 'twoaxis';
+    }
+
+    function settwoaxiscoll() {
+
+        window.datacellvalueonaxis = 'twoaxiscoll';
     }
 
 
@@ -74,6 +92,10 @@
          window.separatorchar = ',';
     }
 
+    function myFunction() {
+    var x = document.getElementById("mySelect").value;
+    document.getElementById("demo").innerHTML = "You selected: " + x;
+    }
 
 </script>
 
