if test on reverse. does not work as expected

--- a/demos/barchart.html
+++ b/demos/barchart.html
@@ -74,11 +74,13 @@
          window.separatorchar = ',';
     }
 
-
+window.reversecols = '0';
 </script>
 
 
-<script src="text.js"></script>
+<script src="text.js">
+</script>
+
 <!--  -->
 <div id="threegraphs-valuelable">
     sss
