--- a/demos/barchartfromfile.html
+++ b/demos/barchartfromfile.html
@@ -23,7 +23,7 @@
       border: 1px solid #fff;
     }
   </style>
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../src/style.css">
     <script type="text/javascript" src="../lib/three.min.js"></script>
     <script type="text/javascript" src="../lib/TrackballControls.js"></script>
     <script type="text/javascript" src="../lib/TrackballControlsTouch.js"></script>
@@ -78,7 +78,7 @@ window.reversecols = '1';
 </script>
 
 
-<script src="text.js">
+<script src="../src/text.js">
 </script>
 
 <!--  -->
