--- a/demos/barchartfromfile.html
+++ b/demos/barchartfromfile.html
@@ -44,8 +44,8 @@
     Choose graph style:
        <form>
            <input type="radio" name="bartype" onchange="setzeroaxis();" value="" checked>No data values on axis<br><br>
-           <input type="radio" name="bartype" onchange="setoneaxis();" value="">Data values 1 axis<br>  <br>
-           <input type="radio" name="bartype" onchange="settwoaxis();" value="" >Data values 2 axises</names><br>
+           <input type="radio" name="bartype" onchange="setoneaxis();" value="">Keep column headers as label<br>  <br>
+           <input type="radio" name="bartype" onchange="settwoaxis();" value="" >Keep column headers and first row as labels</names><br>
 
     </form>
 
